-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
9223372036854775807
An attempt to restripe a striped dir to 1-stripe and then to 2-stripes fails.
A demonstration using a modified sanity test_230o
( https://review.whamcloud.com/c/fs/lustre-release/+/57784 ) :
== sanity test 230o: dir split =========================== 23:39:23 (1736973563)
lod.lustre-MDT0000-mdtlov.mdt_hash=crush
lod.lustre-MDT0001-mdtlov.mdt_hash=crush
mdt.lustre-MDT0000.enable_dir_restripe=1
mdt.lustre-MDT0001.enable_dir_restripe=1
total: 100 create in 0.04 seconds: 2278.42 ops/second
total: 100 mkdir in 0.73 seconds: 137.12 ops/second
Waiting 100s for 'crush'
Updated after 2s: want 'crush' got 'crush'
99 migrated when dir split 1 to 2 stripes
Waiting 100s for 'crush,fixed'
Updated after 3s: want 'crush,fixed' got 'crush,fixed'
lt-lfs setdirstripe: dirstripe error on '/mnt/lustre/d230o.sanity': Invalid argument
lt-lfs setdirstripe: cannot create dir '/mnt/lustre/d230o.sanity': Invalid argument
lmv_stripe_count: 1 lmv_stripe_offset: 0 lmv_hash_type: crush,fixed
mdtidx FID[seq:oid:ver]
0 [0x200002b11:0x3:0x0]
sanity test_230o: @@@@@@ FAIL: split d230o.sanity to 2 stripes failed
Trace dump:
= ./../tests/test-framework.sh:7228:error()
= sanity.sh:23951:test_230o()
= ./../tests/test-framework.sh:7601:run_one()
= ./../tests/test-framework.sh:7664:run_one_logged()
= ./../tests/test-framework.sh:7467:run_test()
= sanity.sh:23956:main()
Dumping lctl log to /tmp/test_logs/1736973560/sanity.test_230o.*.1736973569.log
Dumping logs only on local client.
mdt.lustre-MDT0000.enable_dir_restripe=0
mdt.lustre-MDT0001.enable_dir_restripe=0
FAIL 230o (6s)